# libcamera

./: Cargo.toml  README.md
apps/linux_node/: Cargo.toml
apps/linux_node/src/: main.rs
apps/rtos_node/: Cargo.toml
crates/comm/: Cargo.toml
crates/comm/src/: fan_out.rs  in_process.rs  lib.rs  request_reply.rs  ring_buffer.rs  spin_mutex.rs  topic_router.rs
crates/comm/tests/: test_comm.rs
crates/core_interfaces/: Cargo.toml
crates/core_interfaces/src/: comm_bus.rs  lib.rs  pal.rs  service.rs
crates/core_types/: Cargo.toml
crates/core_types/src/: error.rs  fixed_string.rs  fixed_vec.rs  frame.rs  lib.rs  logging.rs  types.rs
crates/core_types/tests/: test_types.rs
crates/media_core/: Cargo.toml
crates/media_core/src/: lib.rs
crates/media_core/tests/: test_media.rs
crates/platform_linux/: Cargo.toml
crates/platform_linux/src/: lib.rs  pal_fs.rs  pal_network.rs  pal_timer.rs  shm_ring.rs  uds_router.rs
crates/platform_linux/src/daemon/: app_entry.rs  infra_daemon.rs  mod.rs  sys_daemon.rs
crates/platform_linux/tests/: test_pal.rs
crates/platform_rtos/: Cargo.toml
crates/platform_rtos/src/: lib.rs
crates/service_cloud/: Cargo.toml
crates/service_cloud/src/: lib.rs
crates/service_cloud/tests/: test_cloud.rs
crates/service_config/: Cargo.toml
crates/service_config/src/: lib.rs
crates/service_config/tests/: test_config.rs
crates/service_control/: Cargo.toml
crates/service_control/src/: lib.rs
crates/service_control/tests/: test_control.rs
crates/service_live/: Cargo.toml
crates/service_live/src/: lib.rs
crates/service_live/tests/: test_live.rs
crates/service_network/: Cargo.toml
crates/service_network/src/: lib.rs
crates/service_network/tests/: test_network.rs
crates/service_playback/: Cargo.toml
crates/service_playback/src/: lib.rs
crates/service_playback/tests/: test_playback.rs
crates/service_record/: Cargo.toml
crates/service_record/src/: lib.rs
crates/service_record/tests/: test_record.rs
crates/service_storage/: Cargo.toml
crates/service_storage/src/: lib.rs
crates/service_storage/tests/: test_storage.rs
crates/service_talk/: Cargo.toml
crates/service_talk/src/: lib.rs
crates/service_talk/tests/: test_talk.rs
crates/service_time/: Cargo.toml
crates/service_time/src/: lib.rs
crates/service_time/tests/: test_time.rs
crates/service_upgrade/: Cargo.toml
crates/service_upgrade/src/: lib.rs
crates/service_upgrade/tests/: test_upgrade.rs
crates/transport_p2p/: Cargo.toml
crates/transport_p2p/src/: lib.rs
doc/: rust-camera-full-plan_e0478b51.plan.md
tests/integration/: Cargo.toml
tests/integration/tests/: cross_platform.rs  e2e_linux.rs  phase_b.rs
